# JFB

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
src/models/: cache.py  case.py  cli.py  estimator.py  logger.py  report.py  schema.py
src/models/llm_clients/: __init__.py  client.py
src/models/repositories/: __init__.py  prompt.py  schema.py
tests/: test_app_logger.py  test_cache.py  test_case_manager.py  test_estimator.py  test_llm_clients.py  test_main_cli.py  test_prompt_repository.py  test_report.py  test_schema_repository.py
