[project]
name = "JFBench"
description = "A benchmark for evaluating the performance of JSON formatters in large language models (LLMs). This project provides a interface for testing llm performance on extractiong and formating raw data into JSON format based on user's test cases."
authors = [
    { name = "Mikhail Kotov", email = "m.a.k0tov@yandex.ru"}
    ]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=8.6.1",
    "jsonschema>=4.26.0",
    "orjson>=3.11.7",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

# -----------------------------------------------------------------------------
# UV settings
# -----------------------------------------------------------------------------
[tool.uv]
package = true

# -----------------------------------------------------------------------------
# Ruff settings
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py313"
src = ["."]
fix = true
unsafe-fixes = false
preview = false

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Точечные исключения по файлам/маскам (пример для тестов).

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
